--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     </div>
 
     <div class="main">
-      <input class="inputDetails rateInput" placeholder="Rate" />
+      <input
+        type="number"
+        class="inputDetails rateInput"
+        placeholder="Rate / ft"
+      />
 
       <div class="cols">
         &nbsp;&nbsp;&nbsp;&nbsp;
@@ -33,8 +37,16 @@
       <div class="inputDetailsContainer">
         <div class="row r1" data-row="1">
           <span>1.&nbsp;</span>
-          <input type="number" placeholder="Lenght" class="inputDetails lr1" />
-          <input type="number" placeholder="Breadth" class="inputDetails br1" />
+          <input
+            type="number"
+            placeholder="L (in inch)"
+            class="inputDetails lr1"
+          />
+          <input
+            type="number"
+            placeholder="B (in inch)"
+            class="inputDetails br1"
+          />
           <input
             type="number"
             placeholder="No."
